# crabcheck

./: .gitignore  Analysis.py  Cargo.toml  LICENSE  README.md  analysis.rs  biome.json  instrumentation.sh
.cargo/: config.toml
.github/workflows/: ci.yml
demangler/: Cargo.toml
demangler/src/: main.rs
examples/: insertion_sort_correctness.rs  insertion_sort_performance.rs
examples/bst/: bst.rs  main.rs  spec.rs
scripts/: analysis.rs  demangler.rs
src/: fuzzing.rs  lib.rs  parallelism.rs  profiling.rs  quickcheck.rs  seedpool.rs  targeting.rs  tracing.rs  utils.rs
