[package]
name = "crabcheck"
description = "A WIP property-based testing library in Rust, built with generalized targeted-property testing in mind."
categories = ["algorithms", "development-tools::testing"]
keywords = ["pbt", "fuzzing"]
repository = "https://github.com/alpaylan/crabcheck"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Alperen Keles <akeles@umd.edu>",
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
cpu-time = "1.0"
glob = "0.3.2"
rand = "0.8"
rand_chacha = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
profiling = []
tracing = []

[lints.clippy]
type_complexity = "allow"
