[package]
name = "crabcheck"
description = "A WIP property-based testing library in Rust, built with generalized targeted-property testing in mind."
categories = ["algorithms", "development-tools::testing"]
keywords = ["pbt", "fuzzing"]
repository = "https://github.com/alpaylan/crabcheck"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Alperen Keles <akeles@umd.edu>",
    "Umut Şahin <umutsahin@protonmail.com>",
]

[features]
profiling = ["dep:rustc-demangle"]
tracing = []

[lints.clippy]
type_complexity = "allow"

[dependencies]
cpu-time = "1.0"
glob = "0.3.2"
rand = { version = "0.9", default-features = false, features = ["os_rng", "small_rng", "thread_rng"] }
rand_chacha = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# Only for demangling function names in profiling analysis
rustc-demangle = { version = "0.1.24", optional = true }

[[bin]]
name = "crabcheck-profiling-analysis"
path = "scripts/analysis.rs"

[[bin]]
name = "crabcheck-profiling-demangler"
path = "scripts/demangler.rs"